[project]
name = "aplaca-client-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "alpaca-py (>=0.43.2,<0.44.0)",
    "django-allauth[socialaccount] (>=65.13.1,<66.0.0)"
]

[tool.poetry]
packages = [{include = "aplaca_client_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
